# Nyx

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  biome.json  build.rs  components.json  flake.nix  index.html  package.json  renovate.json  vite.config.ts
.github/: changelog_configuration.json
.github/workflows/: pr-check.yml  release.yml
installer/arch/: PKGBUILD
installer/linux/: nyx.desktop
installer/windows/: nyx.nsi
locales/: en-US.yml  ru-RU.yml  zh-CN.yml
patches/: vite-plugin-monaco-editor@1.1.0.patch
scripts/: cleanup-i18n.js  updater.js
src/: App.tsx  i18n.ts  lib.rs  main.rs  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  service_host.rs  shortcuts.rs  tray.rs
src-tauri/src/commands/: config.rs  core.rs  mihomo.rs  mod.rs  service.rs  shortcut.rs  sysproxy.rs  system.rs  tray.rs  updater.rs  utils.rs  window.rs
src-tauri/src/core/: api.rs  manager.rs  mod.rs  streaming.rs
src-tauri/src/utils/: dirs.rs  mod.rs  proxy_convert.rs
src-tauri/src/windows/: main.rs
src/app/: actions.rs  app_icon.rs  assets.rs  autostart.rs  bootstrap.rs  deep_link.rs  hotkeys.rs  mod.rs  runtime.rs  scheduler.rs  single_instance.rs  state.rs  tray.rs  window.rs
src/assets/: main.css
src/backend/: api.rs  config.rs  dirs.rs  elevation.rs  manager.rs  mihomo.rs  mod.rs  proxy_convert.rs  service.rs  startup.rs  streaming.rs  sysproxy.rs  updater.rs
src/components/: app-sidebar.tsx  window-controls.tsx
src/components/base/: base-confirm.tsx  base-error-boundary.tsx  base-list-editor.tsx  base-page.tsx  base-setting-card.tsx  base-setting-item.tsx  collapse-input.tsx  interface-select.tsx  mihomo-icon.tsx
src/components/connections/: connection-detail-modal.tsx  connection-item.tsx  connection-setting-modal.tsx  connection-table.tsx  process-item.tsx
src/components/dns/: advanced-dns-setting.tsx
src/components/icons/: sidebar-icons.tsx
src/components/logs/: log-item.tsx
src/components/mihomo/: advanced-settings.tsx  controller-setting.tsx  env-setting.tsx  interface-modal.tsx  port-setting.tsx  service-modal.tsx
src/components/monaco/: monaco-editor-lazy.tsx  monaco-editor.tsx  monaco-workers.ts
src/components/profiles/: edit-file-modal.tsx  edit-info-modal.tsx  edit-rules-modal.tsx  hwid-limit-alert.tsx  profile-item.tsx
src/components/proxies/: proxy-item.tsx  proxy-setting-modal.tsx
src/components/resources/: geo-data.tsx  proxy-provider.tsx  rule-provider.tsx  viewer.tsx
src/components/rules/: rule-item.tsx
src/components/settings/: actions.tsx  advanced-settings.tsx  appearance-confis.tsx  css-editor-modal.tsx  general-config.tsx  language-config.tsx  proxy-switches.tsx  shortcut-config.tsx
src/components/sider/: config-viewer.tsx  outbound-mode-switcher.tsx
src/components/sysproxy/: bypass-editor-modal.tsx  pac-editor-modal.tsx
src/components/ui/: accordion.tsx  alert-dialog.tsx  avatar.tsx  badge.tsx  button.tsx  card.tsx  character-morph.tsx  checkbox.tsx  command.tsx  dialog.tsx  dropdown-menu.tsx  input-group.tsx  input.tsx  kbd.tsx  label.tsx  popover.tsx  progress.tsx  select.tsx  separator.tsx  sheet.tsx  sidebar.tsx  switch.tsx  tabs.tsx  textarea.tsx  tooltip.tsx
src/components/updater/: updater-button.tsx  updater-modal.tsx
src/hooks/: use-app-config.tsx  use-controled-mihomo-config.tsx  use-groups.tsx  use-language.ts  use-profile-config.tsx  use-rules.tsx
src/locales/en-US/: index.ts
src/locales/ru-RU/: index.ts
src/pages/: connections.tsx  dns.tsx  home.tsx  logs.tsx  mihomo.tsx  profiles.tsx  proxies.tsx  resources.tsx  rules.tsx  settings.tsx  sniffer.tsx  sysproxy.tsx  tun.tsx
src/routes/: index.tsx
src/shared/types/: app.d.ts  controller.d.ts  mihomo.d.ts  types.d.ts
src/ui/: flags.rs  mod.rs  onboarding.rs  rail.rs  root.rs  theme.rs
src/ui/pages/: connections.rs  home.rs  logs.rs  mod.rs  profiles.rs  proxies.rs  rules.rs  settings.rs
src/utils/: calc.ts  debounce.ts  env.d.ts  image.ts  includes.ts  init.ts  ipc.ts  validate.ts
