[package]
name = "nyx"
version = "2.0.1"
description = "Nyx — Mihomo/Clash GUI"
authors = ["BX Team"]
edition = "2021"
license = "GPL-3.0-or-later"
homepage = "https://github.com/BX-Team/Nyx"
repository = "https://github.com/BX-Team/Nyx"

[profile.dev]
incremental = true

[profile.dev.package.gpui]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

[lib]
name = "nyx_lib"
crate-type = ["rlib"]

[dependencies]
# --- UI stack (gpui + gpui-component) ---
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = [
    "font-kit",
    "x11",
    "wayland",
    "runtime_shaders",
] }
gpui-component = { git = "https://github.com/longbridge/gpui-component", features = [
    "tree-sitter-yaml",
] }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }

# --- base utilities ---
log = "0.4"
env_logger = "0.11"
anyhow = "1"

# --- config / state / i18n ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
rust-i18n = "4"

# --- backend bridge + mihomo ---
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "stream"] }
mihomo-rs = "2.2"
once_cell = "1"
parking_lot = "0.12"
rust-embed = "8"
url = "2"
futures-util = "0.3"
base64 = "0.22"
md-5 = "0.11"
emojis = "0.8"

# --- system integration ---
tray-icon = "0.24"
global-hotkey = "0.8"
auto-launch = "0.6"
png = "0.18"

# --- auto-update ---
self_update = { version = "0.44", default-features = false, features = [
    "reqwest",
    "rustls",
    "compression-flate2",
    "compression-zip-deflate",
    "archive-tar",
    "archive-zip",
] }

[target.'cfg(windows)'.dependencies]
windows-service = "0.8"
winreg = "0.56"
raw-window-handle = "0.6"
image = "0.25"
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
] }

[target.'cfg(not(windows))'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
caps = "0.5"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

# --- Linux packaging (cargo-deb / cargo-generate-rpm) ---
# These read `target/release/nyx`, so the Linux release job builds without an
# explicit --target (the ubuntu runner is x86_64 anyway).

[package.metadata.deb]
maintainer = "BX Team"
copyright = "BX Team, GPL-3.0-or-later"
license-file = ["LICENSE", "0"]
extended-description = "A modern, lightweight desktop GUI for the Mihomo proxy core."
section = "net"
priority = "optional"
depends = "$auto, libgtk-3-0, libayatana-appindicator3-1, libcap2-bin"
assets = [
    ["target/release/nyx", "usr/bin/", "755"],
    ["installer/linux/nyx.desktop", "usr/share/applications/", "644"],
    ["assets/brand/logo.png", "usr/share/icons/hicolor/512x512/apps/nyx.png", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/nyx", dest = "/usr/bin/nyx", mode = "755" },
    { source = "installer/linux/nyx.desktop", dest = "/usr/share/applications/nyx.desktop", mode = "644" },
    { source = "assets/brand/logo.png", dest = "/usr/share/icons/hicolor/512x512/apps/nyx.png", mode = "644" },
]

[package.metadata.generate-rpm.requires]
gtk3 = "*"
"libayatana-appindicator-gtk3" = "*"
fontconfig = "*"
freetype = "*"
libcap = "*"
libxkbcommon = "*"
vulkan-loader = "*"
