[package]
name = "nyx"
version = "1.0.2"
description = "Nyx — Mihomo/Clash GUI"
authors = ["BX Team"]
edition = "2021"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

[lib]
name = "nyx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri             = { version = "2", features = ["tray-icon", "image-ico", "image-png", "devtools"] }
tauri-plugin-dialog          = "2"
tauri-plugin-shell           = "2"
tauri-plugin-notification    = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart       = "2"
tauri-plugin-updater         = "2"
tauri-plugin-deep-link       = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-fs              = "2"
tauri-plugin-opener          = "2"
tauri-plugin-http            = "2"
tauri-plugin-process         = "2"
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
serde_yaml        = "0.9"
tokio             = { version = "1", features = ["full", "io-util", "macros", "net", "process", "rt"] }
mihomo-rs         = "*"
reqwest           = { version = "0.13.2", features = ["json", "stream"] }
base64            = "0.22"
once_cell         = "1"
parking_lot       = "0.12"
log               = "0.4"
env_logger        = "0.11"
dirs              = "6"
chrono            = { version = "0.4", features = ["serde"] }
anyhow            = "1"
if-addrs          = "0.15"
url               = "2"
futures-util      = "0.3"
png               = "0.18"

[target.'cfg(windows)'.dependencies]
winreg  = "0.56"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_Security_Authorization",
] }
windows-service = "0.8"

[target.'cfg(not(windows))'.dependencies]
libc = "0.2"
